Fix imgs & styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-toast></app-toast>
-
+<div class="go-back" *ngIf="isShow" (click)="gotoTop()">
+    <img src="../../../assets/1904671-arrow-arrow-right-change-direction-next-page-right_122521.png">
+</div>
 <router-outlet></router-outlet>
