--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -1,7 +1,14 @@
-<div class="bkg-main" style="background-image: url({{bkgUrl}})" alt="Paisaje de un atardecer en La Caleta">
+<div class="bkg-main" alt="Paisaje de un atardecer en La Caleta">
     <app-nav></app-nav>
-    <h1 class="head-main">Bienvenidos a <p style="margin-top: 30px;"></p> Cabañas Lo de Jaz </h1>
-    <app-main-card></app-main-card>
-    <app-footer></app-footer>
-    <app-contact-as></app-contact-as>
+    <h1 class="head-main"><p style="margin-top: 30px;">Cabañas Lo de Jaz</p> </h1>
+    <p  class="p-main" > Bienvenidos</p>
+    <div class="content">
+        <app-main-card></app-main-card>
+        <app-footer></app-footer>
+        <app-contact-as></app-contact-as>
+    </div>
+    <div class="rights">
+        Derechos reservados. 
+        <a aria-label="Desarrolladora" href="https://www.linkedin.com/in/jazmin-briasco/" target="_blank" title="Desarrolladora"> Jazmín Briasco </a >
+    </div>
 </div>
