--- a/src/app/components/card-reverse/card-reverse.component.scss
+++ b/src/app/components/card-reverse/card-reverse.component.scss
@@ -10,6 +10,7 @@
         height: 400px;
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: center; 
     }
     hr {
         @include hrstyle;
