--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -24,9 +24,9 @@
     .col1 {
         height: 280px;
         margin: 10px;
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
-        margin-left: 40px;
+        margin-left: 45px;
         margin-top: 30px;
         margin-bottom: 30px;
     }
