--- a/src/app/components/galery/galery.component.scss
+++ b/src/app/components/galery/galery.component.scss
@@ -1,172 +1,183 @@
 @import '../../utils/mixins.scss';
 
 .gallery-card {
-    background-image: url('../../../assets/playa.jpg');
-    background-size: cover;
-    margin-top: -10px;
-    padding-top: 10px;
-    height: 100vh;
-    .presentation-cabin {
-        width: 90%;
-        background-color: $orange2;
-        margin: 0 auto;
-        @include legendStyleSmall;
-        padding: 3%;
-        letter-spacing: 0.25rem;
-        margin-top: 5%;
-        padding-bottom: 5%;
-        .float-right {
-            float: right;
-            margin-top: 2%;
-            margin-bottom: 2%;
-        }
-        .p-cards-presentation {
-            @include legendStyle;
-            margin: 0 auto;
-            text-align: center;
-            font-family:"Playwrite NZ", cursive;
-            font-size: 35px;
-        }
-        .hr-presentation {
-            margin-bottom: 3%;
-            margin-top: 2%;
-            width: 200px;
-            height: 2px;
-        }
-        .text-legend{   
-          @include legendStyleSmall;
-          letter-spacing: 0.25rem;
-          line-height: 1.4;
-      }
-      .legend-h{
-        @include legendStyleSmall;
-        margin-top: 0;
-      }
-    }
-    .p-cards{
-        @include legendStyle;
-        margin: 0 auto;
-        margin-top: 30px;
-        text-align: center;
-        font-family:"Playwrite NZ", cursive;
-        font-size: 35px;
-    }
-    hr {
-        background-color: #fe884b;
-        width: 80px;
-        height: 2px;
-        margin: 0 auto;
-        margin-top: 2%;
-    }
-    .g-card {
-        width: 90%;
-        background-color: #f0f0f0;
-        margin: 0 auto;
-        margin-top: 40px;
-        padding-top: 20px;
-        padding-bottom: 2%;
-        .list-cabin {
-            font-size: 20px;
-            margin-left: 1%;
-            margin-bottom: 3%;
-            list-style: none;
-            @include legendStyleSmall;
-            padding: 3%;
-            margin-top: 2%;
-            letter-spacing: 0.25rem;
-        }
-        .img-big {
-            width: 95%;
-            margin: 0 auto;
-            display: flex;
-            margin-top: 8px;
-            margin-bottom: 10px;
-          //  box-shadow: 1px 6px 10px 10px rgba(0,0,0,0.6);
-        }
-        .row {
-            display: flex;
-            margin: 0 auto;
-            margin-left: 2%;
-            margin-right:2%;
-        }        
-        .img-row {
-            width: 100%; 
-            padding-left: 1%;
-            padding-right: 1%;
-//            box-shadow: 1px 6px 10px 10px rgba(0,0,0,0.6);
-        }
+  background-image: url('../../../assets/Landscapes/landscape-2.jpeg');
+  background-size: cover;
+  margin-top: -10px;
+  padding-top: 10px;
+  height: 100vh;
 
+  .presentation-cabin {
+    width: 90%;
+    background-color: $orange2;
+    margin: 0 auto;
+    padding: 3%;
+    letter-spacing: 0.25rem;
+    margin-top: 5%;
+    padding-bottom: 5%;
+    @include legendStyleSmall;
+
+    .float-right {
+      float: right;
+      margin: 2% 0;
     }
-    .footer-galery {
-        width: 90%;
-        background-color: #f0f0f0;
-        margin: 0 auto;
-        margin-top: 5%;
-        margin-bottom: 5%;
+
+    .p-cards-presentation {
+      margin: 0 auto;
+      text-align: center;
+      font-family: "Playwrite NZ", cursive;
+      font-size: 35px;
+      @include legendStyle;
     }
+
+    .hr-presentation {
+      width: 200px;
+      height: 2px;
+      margin-bottom: 4%;
+    }
+
+    .text-legend {
+      line-height: 1.4;
+      letter-spacing: 0.25rem;
+      @include legendStyleSmall;
+    }
+
+    .legend-h {
+      margin-top: 0;
+      @include legendStyleSmall;
+    }
+  }
+
+  .p-cards {
+    margin: 30px auto 0;
+    text-align: center;
+    font-family: "Playwrite NZ", cursive;
+    font-size: 35px;
+    @include legendStyle;
+  }
+
+  hr {
+    background-color: #fe884b;
+    width: 80px;
+    height: 2px;
+    margin: 2% auto 0;
+  }
+
+  .g-card {
+    width: 90%;
+    background-color: #f0f0f0;
+    margin: 40px auto 0;
+    padding: 20px 0 2%;
+
+    .list-cabin {
+      font-size: 20px;
+      margin-left: 1%;
+      margin-bottom: 3%;
+      letter-spacing: 0.25rem;
+      padding: 3%;
+      margin-top: 2%;
+      list-style: none;
+      @include legendStyleSmall;
+    }
+
+    .img-big {
+      width: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      margin: 8px auto 10px;
+      display: flex;
+    }
+
+    .row {
+      display: flex;
+      margin: 1%;
+      height: 50vh;
+
+      .img-row {
+        width: 100%;
+        height: 100%;
+        padding: 0 1%;
+        object-fit: cover;
+      }
+
+      .col-sm {
+        flex: 1;
+      }
+    }
+  }
+
+  .footer-galery {
+    width: 90%;
+    background-color: #f0f0f0;
+    margin: 5% auto;
+  }
 }
 
 .carousel {
-    display: flex;
-    width: 96%;
-    margin: 0 auto;
+  display: flex;
+  width: 96%;
+  margin: 0 auto;
 }
+
 .carousel-container {
-    position: relative;
-    max-width: 600px;
-    margin: 0 auto;
-    margin: 1%;
-    overflow: hidden;
-  }
-  
-  .carousel-slide {
-    display: none;
-    width: 100%;
-  }
-  
-  .carousel-slide.active {
+  position: relative;
+  margin: 0.3% 0;
+  margin-top: 10px;
+  overflow: hidden;
+  max-height: 100vh;
+}
+
+.carousel-slide {
+  display: none;
+  width: 100%;
+
+  &.active {
     display: block;
   }
-  
-  .carousel-slide img {
+
+  img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+    background-position: center;
   }
-  
-  .carousel-caption {
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 8px;
+}
+
+.carousel-button {
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.8);
   }
-  
-  .carousel-button {
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    background-color: rgba(0,0,0,0.5);
-    border: none;
-  }
-  
-  .carousel-button:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
-  
-  .carousel-button:focus {
+
+  &:focus {
     outline: none;
   }
-  
-  .carousel-button:nth-of-type(2) {
+
+  &:nth-of-type(2) {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
-  
+}
+
+.img-list {
+  margin: 10px 12px 0 13px;
+
+  .gallery-img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
