--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,7 @@
 <section id="contacto">
 <div class="footer container">
     <div class="row">
-        <div class="col-sm-5 col1" style="background-image: url({{bkgUrl}})">
-
-        </div>
-
+        <div class="col-sm-5 col1 responsive" style="background-image: url({{bkgUrl}})"></div>
         <div class="col-sm-6 col2">
             <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" id="contact-form">
                 
