--- a/src/app/components/principal/principal.component.html
+++ b/src/app/components/principal/principal.component.html
@@ -7,8 +7,5 @@
         <app-footer></app-footer>
         <app-contact-as></app-contact-as>
     </div>
-    <div class="rights">
-        Derechos reservados. 
-        <a aria-label="Desarrolladora" href="https://www.linkedin.com/in/jazmin-briasco/" target="_blank" title="Desarrolladora"> Jazmín Briasco </a >
-    </div>
+    <app-rights></app-rights>
 </div>
