--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -17,3 +17,22 @@ img {
 img:hover {
     width: 50px;
 }
+
+@media only screen and (min-width: 576px) and (max-width: 1100px) {
+    .go-back {
+        margin-left: 92%;
+    }
+ 
+ }
+
+@media only screen and (max-width: 576px) { 
+    .go-back {
+        margin-left: 92%;
+    }
+    img {
+        width: 30px;
+    }
+    img:hover {
+        width: 30px;
+    }
+}
