--- a/src/app/components/card-reverse/card-reverse.component.scss
+++ b/src/app/components/card-reverse/card-reverse.component.scss
@@ -30,3 +30,54 @@
     }
     
 }
+
+@media (min-width: 768px) and (max-width: 1100px) {
+    hr {
+        display: none;
+
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+    .individual-card-reverse {
+        .card-section-1-reverse {
+            width: 60%;
+        }
+        hr {
+            display: none;
+        }
+        .card-section-2-reverse {
+            .p-cards-reverse{
+                font-size: 14px;
+                margin-left: 24px;        
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .container-card{
+        height: 100%;
+        display: inline-flex;
+        width: 90%;
+        margin-top: 58px;
+        background-color: #ffe0d8;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center; 
+        .card {
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            align-items: center;
+            text-align: center;
+            img {
+               width: 100%;
+               margin-bottom: 10px;
+            }
+            .card-text {
+                padding: 1%;
+            }
+        }
+    }
+}
