--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,8 +1,21 @@
-<div class="individual-card">
-    <div class="card-section-1">
-        <h3 class="p-cards">{{legend}}</h3>
-        <hr>
-    </div>
-    <div class="card-section-2" style="background-image: url({{bkgUrl}})">
+<div *ngIf="!useResponsiveCard; else responsiveReverseCard">
+    <div class="individual-card">
+        <div class="card-section-1">
+            <h3 class="p-cards">{{legend}}</h3>
+            <hr>
+        </div>
+        <div class="card-section-2" style="background-image: url({{bkgUrl}})"></div>
     </div>
 </div>
+
+
+<ng-template #responsiveReverseCard>
+    <div class="container-card">
+        <div class="card">
+            <img class="card-img-top" src={{bkgUrl}} alt="Card image cap">
+            <div class="card-body">
+                <p class="card-text">{{legend}}</p>
+            </div>
+        </div>
+    </div>
+</ng-template>
