--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -28,3 +28,30 @@
     }
     
 }
+
+@media only screen and (max-width: 576px) {
+    .container-card{
+        height: 100%;
+        display: inline-flex;
+        width: 90%;
+        margin-top: 58px;
+        background-color: #ffe0d8;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center; 
+        .card {
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            align-items: center;
+            text-align: center;
+            img {
+               width: 100%;
+               margin-bottom: 10px;
+            }
+            .card-text {
+                padding: 1%;
+            }
+        }
+    }
+}
