--- a/src/app/components/contact-as/contact-as.component.scss
+++ b/src/app/components/contact-as/contact-as.component.scss
@@ -45,3 +45,49 @@
     }
 }
 
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+    .contactAs {
+        .row {
+            .col1 {
+                margin-top: 25px;
+                height: 200px;
+            }
+            .col2 { 
+                height: 440px;
+                border-left: none;
+                padding-left: 7px;
+                height: 250px;
+                .map {
+                    width: 100%;
+                    height: 210px;
+                    border: 2px solid #fe884b;;
+                    padding: 1px;
+                }
+            }
+        }
+    }
+}
+
+  @media only screen and (max-width: 576px) {
+    .contactAs {
+        .row {
+            .col1 {
+                margin-left: 0px;
+                margin-top: 25px;
+                height: 200px;
+            }
+            .col2 { 
+                height: 440px;
+                border-left: none;
+                padding-left: 7px;
+                height: 250px;
+                .map {
+                    width: 100%;
+                    height: 210px;
+                    border: 2px solid #fe884b;;
+                    padding: 1px;
+                }
+            }
+        }
+    }
+  }
