--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -57,3 +57,49 @@
         
     }
 }
+
+@media (min-width: 768px) and (max-width: 1000px) {
+    .footer {
+        .col1 {
+            width: 87%;
+            margin-bottom: 0px;
+        }
+        .col2 { 
+            width: 85%;
+            margin-left: 50px;            
+            button {
+                width: 100%;
+            }
+        
+        }
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .footer {
+        .row {
+            background-color: #ffe0d8;
+            margin-bottom: 3%;
+            .msgInput {
+                height: 70px;
+            }
+        }
+        .col1 {
+            display: none;
+            
+        }
+        .col2 { 
+            height: 350px;
+            width: 85%;
+            padding-top: 0px;
+            padding-left: 30px;
+            button {
+                margin-left: 12px;
+            }
+        }
+    }
+    textarea, input {
+        width: 100%;
+        margin-left: 12px;
+    }  
+ }
