--- a/src/app/components/galery/galery.component.scss
+++ b/src/app/components/galery/galery.component.scss
@@ -25,7 +25,6 @@
     .p-cards-presentation {
       margin: 0 auto;
       text-align: center;
-      font-family: "Playwrite NZ", cursive;
       font-size: 35px;
       @include legendStyle;
     }
@@ -115,8 +114,9 @@
 
 .carousel {
   display: flex;
-  width: 96%;
+  width: 100%;
   margin: 0 auto;
+  height: 105%;
 }
 
 .carousel-container {
@@ -132,7 +132,9 @@
   width: 100%;
 
   &.active {
-    display: block;
+    display: grid;
+    width: 100%;
+    height: 100%;
   }
 
   img {
@@ -181,3 +183,5 @@
     object-fit: cover;
   }
 }
+
+
