--- a/src/app/components/main-card/main-card.component.scss
+++ b/src/app/components/main-card/main-card.component.scss
@@ -28,3 +28,11 @@
         margin-top: 80px;
     }
 }
+
+@media only screen and (max-width: 576px) { 
+    .main-card {
+        .cards {
+            margin-top: 5px;
+        }
+    }
+}
