--- a/src/app/components/nav/nav.component.scss
+++ b/src/app/components/nav/nav.component.scss
@@ -14,3 +14,31 @@
     }
 }
 
+
+@media only screen and (max-width: 900px) {
+    .open-nav{
+        cursor: pointer;
+        img{
+            margin: 20px;
+            width: 40px;
+        }
+    }
+    .nav-display{
+        justify-content: flex-start;
+        display: grid;
+        margin-left: 70px;
+        margin-top: -70px;
+        background-color: #f0f0f066;
+        width: 240px;
+        border-radius: 3%;
+        position: absolute;
+        .nav-pills>li{
+            display: contents;      
+            .nav-link {
+                margin: 0;
+                height: 33px;
+                font-size: 15px;
+            }  
+        }
+    }
+  }
