--- a/src/app/components/galery/galery.component.scss
+++ b/src/app/components/galery/galery.component.scss
@@ -185,3 +185,10 @@
 }
 
 
+@media only screen and (max-width: 576px) {
+  .presentation-cabin {
+    display: grid;
+    text-align: center;
+  }
+
+}
