--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,7 +9,6 @@
         -webkit-appearance: none; 
         margin: 0; 
     }
-    
     .row {
         background-color: #ffe0d8;
         margin-bottom: 3%;
@@ -54,11 +53,19 @@
             background-color: #ca5b24;
             border: none;
         }
+
+        .spinner {
+            display: flex;
+            justify-content: center;
+            img{
+                height: 55px;
+            }
+        }
         
     }
 }
 
-@media (min-width: 768px) and (max-width: 1000px) {
+@media (min-width: 768px) and (max-width: 1133px) {
     .footer {
         .col1 {
             width: 87%;
@@ -70,7 +77,9 @@
             button {
                 width: 100%;
             }
-        
+            .spinner {
+                margin-top: -10px;
+            }
         }
     }
 }
@@ -78,8 +87,6 @@
 @media only screen and (max-width: 768px) {
     .footer {
         .row {
-            background-color: #ffe0d8;
-            margin-bottom: 3%;
             .msgInput {
                 height: 70px;
             }
@@ -96,10 +103,12 @@
             button {
                 margin-left: 12px;
             }
+            .spinner {
+                margin-top: -10px;
+            }      
         }
-    }
     textarea, input {
         width: 100%;
         margin-left: 12px;
-    }  
+    }  }
  }
