--- a/src/app/components/principal/principal.component.scss
+++ b/src/app/components/principal/principal.component.scss
@@ -25,8 +25,10 @@
     }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 576px) { 
     .bkg-main {
-     //   background-image: url('../../../assets/Landscapes/landscape-09.jpeg');
+        .head-main{
+            margin-top: 100px;
+        }
     }
-  }
+}
